--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
-    //implementation 'com.google.android.material:material:1.2.0-alpha04'
-   // implementation 'com.google.firebase:firebase-analytics:17.2.2'
-   // implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.drawerlayout:drawerlayout:1.0.0"
     implementation 'com.google.firebase:firebase-firestore:21.4.0'
     implementation 'com.google.firebase:firebase-core:17.2.2'
     implementation 'com.google.firebase:firebase-database:19.2.1'
@@ -50,11 +49,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-   // implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'com.squareup.picasso:picasso:2.71828'
-   // implementation 'com.firebaseui:firebase-ui-database:1.2.0'
+   implementation 'com.squareup.picasso:picasso:2.71828'
 
 
 }
