--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activities.CartActivity"></activity>
+        <activity android:name=".activities.AboutUsActivity" />
+        <activity android:name=".activities.ProfileActivity" />
+        <activity android:name=".activities.OrdersActivity" />
+        <activity android:name=".activities.NotificationsActivity" />
+        <activity android:name=".activities.UserDashboard" />
+        <activity android:name=".activities.LunchActivity" />
+        <activity android:name=".activities.BreakfastActivity" />
         <activity
-            android:name=".Home"
+            android:name=".activities.Home"
             android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-        <activity android:name=".Signup" />
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.Signup" />
         <activity
-            android:name=".Login"
+            android:name=".activities.Login"
             android:label="@string/title_activity_login" />
-        <activity android:name=".WelcomeActivity">
+        <activity android:name=".activities.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
