--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,10 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:24.1.1'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
+    //implementation 'com.google.android.gms:play-services-auth:9.2.1'
+   implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    // glide is added to load the g+ profile image. Ignore if you want
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
