--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.moriah">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -12,6 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".model.GlobalApplication"
         android:allowBackup="true"
         android:fullBackupContent="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,8 +19,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:name=".model.GlobalApplication">
+        tools:ignore="GoogleAppIndexingWarning">
+
 
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -36,29 +36,23 @@
 
         <activity
             android:name=".activities.TrackOrder"
-            android:label="@string/title_activity_track_order">
-
-        </activity>
+            android:label="@string/title_activity_track_order"/>
         <activity android:name=".admin.EditOrders" />
         <activity android:name=".admin.AddCategory" />
         <activity android:name=".activities.FoodDetail" />
         <activity android:name=".activities.SplashActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
         <activity android:name=".activities.CartActivity" />
         <activity android:name=".activities.AboutUsActivity" />
         <activity android:name=".activities.ProfileActivity" />
         <activity android:name=".activities.OrdersActivity" />
         <activity android:name=".activities.NotificationsActivity" />
-        <activity android:name=".activities.UserDashboard" />
-        <activity
-            android:name=".activities.Home"
-            android:label="@string/title_activity_home"
-            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.UserDashboard"/>
         <activity android:name=".activities.Signup" />
         <activity
             android:name=".activities.Login"
